--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "element-ui": "^2.15.9",
     "mockjs": "^1.1.0",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.4"
+    "vue-router": "^3.5.4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -38,7 +39,7 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {
-      "no-unused-vars": "off" 
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
