--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.9",
+    "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4",
