--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "element-ui": "^2.15.9",
     "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
+    "svg-sprite-loader": "^5.2.1",
     "vue": "^2.6.14",
+    "vue-loader": "^17.0.0",
     "vue-router": "^3.5.4",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
