--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "element-ui": "^2.15.9",
     "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.2",
     "svg-sprite-loader": "^5.2.1",
     "vue": "^2.6.14",
     "vue-loader": "^17.0.0",
