--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
     "node-sass": "^7.0.1",
+    "nprogress": "^0.2.0",
     "sass-loader": "^13.0.2",
     "svg-sprite-loader": "^5.2.1",
     "vue": "^2.6.14",
     "vue-loader": "^17.0.0",
     "vue-router": "^3.5.4",
-    "vuex": "^4.0.2",
+    "vuex": "^3.6.2",
     "webpack": "^5.74.0"
   },
   "devDependencies": {
