--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.3",
     "element-ui": "^2.15.9",
     "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
@@ -19,7 +20,7 @@
     "vue": "^2.6.14",
     "vue-loader": "^17.0.0",
     "vue-router": "^3.5.4",
-    "vuex": "^4.0.2",
+    "vuex": "^3.6.2",
     "webpack": "^5.74.0"
   },
   "devDependencies": {
