--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "echarts": "^5.3.3",
+    "echarts": "^4.9.0",
     "element-ui": "^2.15.9",
     "js-cookie": "^3.0.1",
+    "jsonp": "^0.2.1",
     "mockjs": "^1.1.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
