--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonp": "^0.2.1",
     "mockjs": "^1.1.0",
     "node-sass": "^7.0.1",
+    "querystring-es3": "^0.2.1",
     "sass-loader": "^13.0.2",
     "svg-sprite-loader": "^5.2.1",
     "vue": "^2.6.14",
