--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "svg-sprite-loader": "^5.2.1",
     "vue": "^2.6.14",
     "vue-loader": "^17.0.0",
+    "vue-monoplasty-slide-verify": "^1.3.0",
     "vue-router": "^3.5.4",
     "vuex": "^3.6.2",
     "webpack": "^5.74.0"
