--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.18.10",
     "axios": "^0.27.2",
+    "babel-eslint": "^10.1.0",
     "core-js": "^3.8.3",
     "echarts": "^4.9.0",
     "element-ui": "^2.15.9",
